<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4CAF50"
        android:text="@string/qu_n_l_s_n_ph_m"
        android:textAlignment="center"
        android:textColor="#FFFFFF" />

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/danh_m_c" />

        <Spinner
            android:id="@+id/danhmucsp"
            android:layout_width="250dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/m_sp" />

        <EditText
            android:id="@+id/masp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/vui_l_ng_nh_p_m_s_n_ph_m"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/t_n_sp" />

        <EditText
            android:id="@+id/tensp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/vui_l_ng_nh_p_t_n_s_n_ph_m"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnnhap"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/nh_p_sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4CAF50"
        android:text="@string/danh_s_ch_s_n_ph_m_theo_danh_m_c"
        android:textAlignment="center"
        android:textColor="#FFFFFF" />

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>